Fix parallel sentence alignment, fix #323

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -898,7 +898,6 @@ a {
   color: #999;
   font-style: italic;
   position: relative;
-  text-align: center;
   .left, .match, .right {
     display : none;
   }
